--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Manger</title>
-    <link rel="stylesheet" href="app.cs">
+    <link rel="stylesheet" href="app.css">
     <script src="dist/app.js" type="module"></script>
 </head>
 
